# opensot_visual_servoing

./: CMakeLists.txt  README.md  package.xml  setup.py
include/opensot_visual_seroving/tasks/velocity/: VisualServoing.h
include/opensot_visual_seroving/utils/: Utils.h
msg/: VisualFeature.msg  VisualFeatures.msg
python/: features_extraction.py  image_processing_node  image_processing_node.ipynb  image_processing_rg_node
python/features_extraction/: features_extraction.py  features_extraction_rg.py  points_extraction.py
src/cartesio_support/tasks/velocity/: VisualServoing.cpp  VisualServoing.h
src/tasks/velocity/: VisualServoing.cpp
src/utils/: Utils.cpp
tests/: CMakeLists.txt  cartesio_test.launch  cartesio_test.stack  config.rviz  plotTests.ipynb
tests/tasks/velocity/: TestVisualServoing.cpp
